<resources>
    <string name="app_name" translatable="false">SiriusAPP</string>

    <string-array name="drawer_itens">
        <item>Ranking</item>
        <item>Novo Grupo</item>
        <item>Lançamento</item>
    </string-array>

    <string-array name="drawer_icons">
        <item>@drawable/ic_rank</item>
        <item>@drawable/ic_novo_grupo</item>
        <item>@drawable/ic_pre_lanc</item>
    </string-array>

    <string name="txt_nome_grupo" translatable="false">Nome do grupo</string>
    <string name="txt_turma_grupo" translatable="false">Turma </string>
    <string name="txt_membros_grupo" translatable="false">Integrantes </string>
    <string name="data_de_lancamento" translatable="false">Data de Lançamento</string>
    <string name="distancia_ate_alvo" translatable="false">Distância até o alvo (m)</string>
    <string name="angulo_lacamento" translatable="false">Ângulo do lançamento (º)</string>
    <string name="velocidade_vento" translatable="false">Velocidade do vento (m/s)</string>
    <string name="peso_foguete" translatable="false">Peso do foguete (g)</string>

    <string name="pos_lancamento" translatable="false">Pós Lançamento</string>
    <string name="distancia_alcancada" translatable="false">Distância Alcançada</string>
    <string name="altura_max" translatable="false">Altura máxima (m)</string>
    <string name="velocidade_max" translatable="false">Velocidade máxima (m/s)</string>
    <string name="tmp_propulsao" translatable="false">Tempo de Propulsão (cs)</string>
    <string name="pico_acelaracao" translatable="false">Pico de Aceleração (Gs)</string>
    <string name="aceleracao_media" translatable="false">Aceleração media (Gs)</string>
    <string name="tmp_apogeo_descida" translatable="false">Tempo entre apogeu e descida (s)</string>
    <string name="alt_ejecao" translatable="false">ALtitude de ejeção (m)</string>
    <string name="taxa_descida" translatable="false">Taxa de descida (s)</string>
    <string name="duracao_voo" translatable="false">Duração do voo (s)</string>

    <string name="btn_salvar">Salvar</string>

    <string name="txt_rankinign_sem_grupos" translatable="false">Nennhum grupo encontrado!</string>
    <string name="txt_nome_membro" translatable="false">Nome</string>
    <string name="txt_rm_membro" translatable="false">RM</string>
    <string name="novo_integrante">Novo membro</string>
    <string name="cancelar">Cancelar</string>
    <string name="cadastrar" translatable="false">Cadastrar</string>
    <string name="txt_grupo_sem_integrantes" translatable="false">Cadastre ao menos um integrante!</string>
    <string name="integrante_salvo_sucesso">Integrante salvo com sucesso!</string>
    <string name="erro_add_integrante" translatable="false">Ocorreu um erro: Integrante não foi adicionado.</string>
    <string name="valida_grupos">Insira o nome do grupo e a turma</string>
    <string name="confirma_cad_grupo">Cadastrar novo grupo?</string>
    <string name="aguarde">Aguarde...</string>
    <string name="msg_grupo_salvo_sucesso">Grupo salvo com sucesso!</string>
    <string name="erro_salvar_grupo" translatable="false">Ocorreu um erro: Grupo não foi cadastrado.</string>
    <string name="adicionar">Adicionar</string>


</resources>
