<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.sirius.spacecup.siriusapp.fragments.FragmentCadPreLancamento">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:labelFor="@+id/prelancto_dtLancamento"
                android:text="@string/txt_nome_grupo" />
            <Spinner
                android:id="@+id/prelancto_Grupos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:labelFor="@+id/prelancto_dtLancamento"
                android:text="@string/data_de_lancamento" />


            <DatePicker
                android:id="@+id/prelancto_dtLancamento"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:calendarViewShown="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/distancia_ate_alvo" />

            <EditText
                android:id="@+id/prelancto_distanciaAlvo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distancia_ate_alvo"
                android:inputType="number" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/angulo_lacamento" />

            <EditText
                android:id="@+id/prelancto_angulo_lancto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/angulo_lacamento"
                android:inputType="number" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/velocidade_vento" />


            <EditText
                android:id="@+id/prelancto_velocidade_vento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/velocidade_vento"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/peso_foguete" />

            <EditText
                android:id="@+id/prelancto_peso_foguete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peso_foguete"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/pos_lancamento"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/altura_max" />

            <EditText
                android:id="@+id/poslancto_prelancto_distancia_alcancada"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/altura_max"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/distancia_alcancada" />

            <EditText
                android:id="@+id/poslancto_altura_max"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distancia_alcancada"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/velocidade_max" />

            <EditText
                android:id="@+id/poslancto_velocidade_max"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/velocidade_max"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/pico_acelaracao" />

            <EditText
                android:id="@+id/poslancto_pico_aceleracao"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pico_acelaracao"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/aceleracao_media" />

            <EditText
                android:id="@+id/poslancto_aceleracao_media"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aceleracao_media"
                android:inputType="number" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/tmp_propulsao" />

            <EditText
                android:id="@+id/poslancto_tmp_propulsao"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tmp_propulsao"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/tmp_apogeo_descida" />

            <EditText
                android:id="@+id/poslancto_tmp_apogeo_decida"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tmp_apogeo_descida"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/alt_ejecao" />

            <EditText
                android:id="@+id/poslancto_alt_ejecao"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alt_ejecao"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/taxa_descida" />

            <EditText
                android:id="@+id/poslancto_taxa_descida"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/taxa_descida"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/duracao_voo" />

            <EditText
                android:id="@+id/poslancto_duracao_voo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/duracao_voo"
                android:inputType="number" />

        </LinearLayout>

    </ScrollView>

    <fragment
        android:id="@+id/footerbar_prelancto"
        android:name="app.sirius.spacecup.siriusapp.fragments.FragmentFooterBar"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:tag="footerBar"
        tools:context="app.sirius.spacecup.siriusapp.fragments.FragmentCadPreLancamento"
        tools:layout="@layout/layout_footer_bar" />

</FrameLayout>
