<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.sirius.spacecup.siriusapp.fragments.FragmentCadPreLancamento">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:baselineAligned="false">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/data_de_lancamento" />
            </TableRow>

            <TableRow>


                <DatePicker
                    android:id="@+id/prelancto_dtLancamento"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/distancia_ate_alvo" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/prelancto_distanciaAlvo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="3"
                    android:inputType="number" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/angulo_lacamento" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/prelancto_angulo_lancto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="3"
                    android:inputType="number" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/velocidade_vento" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/prelancto_velocidade_vento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="3"
                    android:inputType="number" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/peso_foguete" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/prelancto_peso_foguete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="3"
                    android:inputType="number" />
            </TableRow>
        </TableLayout>

    </ScrollView>

    <fragment
        android:name="app.sirius.spacecup.siriusapp.fragments.FragmentFooterBar"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:tag="footerBar"
        tools:context="app.sirius.spacecup.siriusapp.fragments.FragmentCadPreLancamento"
        tools:layout="@layout/layout_footer_bar" />
</FrameLayout>