<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context="app.sirius.spacecup.siriusapp.fragments.FragmentCadPosLancamento">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <!-- TODO: Criar um View personalizado para buscar o grupo -->
            <!--<app.sirius.spacecup.siriusapp.fragments.FragmentCadPreLancamento-->
            <!--android:id="@+id/fragment_container_layout_posLancto"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->
            <!--android:isScrollContainer="true"/>-->

            <!--<include layout="@layout/fragment_cad_pre_lancamento" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/distancia_ate_alvo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/distancia_ate_alvo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/distancia_ate_alvo" />

            <EditText
                android:id="@+id/prelancto_distanciaAlvo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distancia_ate_alvo"
                android:inputType="number"
                android:maxLength="3" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/angulo_lacamento" />

            <EditText
                android:id="@+id/prelancto_angulo_lancto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/angulo_lacamento"
                android:inputType="number"
                android:maxLength="3" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/velocidade_vento" />


            <EditText
                android:id="@+id/prelancto_velocidade_vento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/velocidade_vento"
                android:inputType="number"
                android:maxLength="3" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/peso_foguete" />


            <EditText
                android:id="@+id/prelancto_peso_foguete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peso_foguete"
                android:inputType="number"
                android:maxLength="3" />
        </LinearLayout>
        <!--1) Altitude máxima-->

        <!--2) Velocidade máxima-->

        <!--3) Tempo de propulsão-->

        <!--4) Pico de Aceleração-->

        <!--5) Aceleração media-->

        <!--6) Tempo entre apogeu e descida-->

        <!--7) Tempo de ejeção-->

        <!--8) Altitude de ejeção-->

        <!--9) Taxa de descida-->

        <!--10) Duração do voo-->

    </ScrollView>


    <fragment
        android:id="@+id/footerbar_poslancto"
        android:name="app.sirius.spacecup.siriusapp.fragments.FragmentFooterBar"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        tools:layout="@layout/layout_footer_bar" />

</FrameLayout>
